# ChatGPTPromptEng

./: .env.template  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: linters.yml
docker/src/: Dockerfile
notebooks/: guidelines.ipynb  l1-guidelines.ipynb  l2-guidelines.ipynb  l2-iterative-prompt-development.ipynb  l3-iterative-prompt-development.ipynb  l3-summarizing.ipynb  l4-inferring.ipynb  l4-summarizing.ipynb  l5-inferring.ipynb  l6-transforming.ipynb  l7-expanding.ipynb  l8-chatbot.ipynb  l9-summary.ipynb
notebooks/.ipynb_checkpoints/: guidelines-checkpoint.ipynb
